# task-executor

./: .gitignore  Cargo.toml
_config_files/: log4rs.yml
_config_files/cert/: ayagasha.crt  ayagasha.key  ca-cert.pem  ca-key.pem
_config_files/resources/: attachment.avsc  contact.avsc  message.avsc
common-utils/: Cargo.toml
common_libs/: Cargo.toml
common_libs/src/: error.rs  files.rs  lib.rs  utils.rs
config/: config.yml
config/logs/: log4rs.yml
data/: initial_test.txt  listen.txt  translations.csv
data/download/: initial_download.txt
data/en-en/cambridge/json/: Emerging.json  abundance.json  adamant.json  adulation.json  adversary.json  albeit.json  allegations.json  amid.json  anger.json  attainable.json  avowed.json  bail out.json  beef up.json  beholden.json  bespoke.json  blunt.json  bolster.json  boos.json  call off.json  came up.json  cast on.json  cease.json  chagrin.json  circumference.json  cling.json  coerce.json  combust.json  compound.json  condolences.json  contemplate.json  contempt.json  contiguous.json  cordial.json  corroborating.json  crackdown.json  cursory.json  dairy.json  deceptive.json  defer.json  deliberately.json  (+95 more)
data/en-en/collins/json/: Emerging.json  abundance.json  adamant.json  adulation.json  adversary.json  albeit.json  allegations.json  amid.json  anger.json  avowed.json  bail out.json  beef up.json  beholden.json  bespoke.json  blunt.json  bolster.json  boos.json  brinkmanship.json  call off.json  came up.json  capped off.json  cast on.json  cease.json  chagrin.json  cling.json  coerce.json  combust.json  compound.json  condolences.json  contempt.json  contiguous.json  cordial.json  corroborating.json  crackdown.json  crave most.json  cursory.json  deceptive.json  deliberately.json  depict.json  despite.json  (+103 more)
data/en-en/oxford/json/: Emerging.json  abundance.json  adamant.json  adulation.json  adversary.json  albeit.json  amid.json  anger.json  attainable.json  avowed.json  bail out.json  beef up.json  beholden.json  bespoke.json  blunt.json  bolster.json  brinkmanship.json  call off.json  cast on.json  cease.json  chagrin.json  (+103 more)
data/quiz/: quiz1.txt
data/stat/: statistic.json
executor/: Cargo.toml
executor/config/logs/: log4rs.yml
executor/src/: build.rs  lib.rs  main.rs  message.proto  model.rs  tests.rs
http-srv/: Cargo.toml
http-srv/src/: lib.rs  model.rs  scrape_controller.rs
mk-scraper/: Cargo.toml
mk-scraper/download/tmp/cambridge/: correct.html
mk-scraper/download/tmp/collins/: rampage.html
mk-scraper/download/tmp/oxford/: correct.html
mk-scraper/src/: cambridge_scraper.rs  collins_scraper.rs  constants.rs  lib.rs  model.rs  oxford_scraper.rs  task_executor.rs  unit_tests.rs
starter/: Cargo.toml
starter/src/: main.rs
