[package]
name = "common_libs"
version = "1.0.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"



[dependencies]
clap = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
inner = "0.1.1"
serde_json = "1.0.74"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8.1"
futures = "0.3.19"
async-std = "1.10.0"
reqwest = {version = "0.11.7"}
rodio = "0.17.1"
scraper = "0.15.0"
itertools = "0.10.3"
ansi_term = "0.12.1"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
log4rs = "1.0.0"
lazy_static = "1.4.0"
async-trait = "0.1.52"